# pytorch-introduction

./: README.md  pyproject.toml
model/: trained_weights.pth
scripts/: test.py  train.py
src/introduction/: model.py
